--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crocodile Facts</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Fun Facts Generator</title>
 </head>
 <body>
     <div class="container">
-        <h1>Crocodile Facts</h1>
-        <div id="factDisplay" class="fact-display">Click the button to get a random fact!</div>
-        <button id="factButton" class="fact-button">Get a Fact</button>
+        <h1>Fun Facts Generator</h1>
+        <div class="fact" id="factDisplay">Click the button to get a fun fact!</div>
+        <button id="factButton">Get a Fun Fact</button>
     </div>
     <script src="script.js"></script>
 </body>
