--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Fun Facts Generator</title>
+    <title>Random Facts</title>
 </head>
 <body>
     <div class="container">
-        <h1>Fun Facts Generator</h1>
-        <div class="fact" id="factDisplay">Click the button to get a fun fact!</div>
-        <button id="factButton">Get a Fun Fact</button>
+        <h1>Random Facts</h1>
+        <div id="factDisplay" class="fact-display">Click the button to get a random fact!</div>
+        <button id="factButton" class="fact-button">Get Fact</button>
     </div>
     <script src="script.js"></script>
 </body>
